api-gw/nginx/cmbc/f5-manage10/3.2.13/external-app-order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: f5-manage10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: artifactory.dev.cmbc.cn:31345/net-docker-ver-local/nginx/cafe:1.5-aarch64
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1"
            memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  namespace: f5-manage10
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: order
  type: NodePort
