api-gw/nginx/cmbc/f5-manage10/3.2.13/service-ip.yaml
kind: Service
apiVersion: v1
metadata:
  name: external-service-ip
  namespace: f5-manage10
spec:
  externalIPs:
  - 197.20.31.6  # VM IP
