api-gw/nginx/cmbc/f5-manage10/3.2.13/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: external-service
  namespace: f5-manage10
spec:
  type: ExternalName
  externalName: f5nginx.dev.cmbc.cn
